chgmgmt_build/src/objects/Colleague_Negotiate__c.object
<CustomObject>
    <fields>
        <fullName>Commision_Percent__c</fullName>
        <label>直接雇用紹介率</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>主な競合他社</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>マンパワー</fullName>
                </value>
                <value>
                    <fullName>リクルートスタッフィング</fullName>
                </value>
                <value>
                    <fullName>テンプスタッフ</fullName>
                </value>
                <value>
                    <fullName>パソナ</fullName>
                </value>
                <value>
                    <fullName>リクナビNext</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>確定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>交渉中</fullName>
                </value>
                <value>
                    <fullName>完了</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Possibility_of_Added_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>付加価値型無期可能性</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>交渉単価</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>交渉開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transport_Cost__c</fullName>
        <label>交通費</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>スタッフ</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>コリーグ交渉結果</relationshipLabel>
        <relationshipName>Colleage_Negotitation</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>コリーグ交渉結果</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>コリーグ交渉結果名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>コリーグ交渉結果</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>